Fix to scrollbar appearing since scrollbar bug on listings show page sticky reservation box

--- a/frontend/src/components/Listings/ListingsIndex.css
+++ b/frontend/src/components/Listings/ListingsIndex.css
@@ -5,6 +5,7 @@
 .grid-container-container {
 	display: block;
 	padding: 0px 80px;
+	padding-bottom: 10px;
 	container-type: inline-size;
 }
 
