--- a/frontend/src/components/Listings/ListingsShowPage.css
+++ b/frontend/src/components/Listings/ListingsShowPage.css
@@ -402,7 +402,8 @@
 }
 
 .floating-form-container {
-	overflow: scroll;
+	/* DISABLED BELOW DUE TO SCROLL BUG ON 7/20 */
+	/* overflow: scroll; */
 	width: 100%;
 	/* height: 323px; */
 	/* background-color: aqua; */
@@ -422,7 +423,8 @@
 	/* THESE TWO LINES PREVENT INNER CONTAINER CONTENT FROM */
 	/* SPILLING INTO OUTER CONTAINER PADDING */
 	height: 100%;
-	overflow: scroll;
+	/* DISABLED BELOW DUE TO SCROLL BUG ON 7/20 */
+	/* overflow: scroll; */
 	
 	padding: 24px;
 	border: 1px solid rgb(221, 221, 221);
